font switch back

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <p>Until recently, I was at <a href="http://rigetti.com" target="_blank">rigetti</a> quantum
         computing, where I worked on topics across research, product and strategy. I was product lead for
-        building and launching rigetti's quantum cloud service using it's superconducting QPUs and the
+        building and launching rigetti's quantum cloud service on top of it's superconducting QPUs and the
         <a href="http://forest.rigetti.com" target="_blank">forest</a>
         quantum programming toolkit.
     </p>
@@ -63,7 +63,7 @@
         and
         <a href="https://github.com/rigetticomputing/grove" target="_blank">grove</a>. My
         quantum instruction set of choice is
-        <a href="https://arxiv.org/abs/1608.03355" target="_blank">Quil</a>. My
+        <a href="https://arxiv.org/abs/1608.03355" target="_blank">quil</a>. My
         <a href="http://arxiv.org/abs/1512.08062" target="_blank"> phd thesis</a>
         at oxford applies abstract methods (mainly from categorical algebra) to the
         study of quantum algorithms and protocols. Before that I worked with superconducting
