--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <p>Until recently, I was at <a href="http://rigetti.com" target="_blank">rigetti</a> quantum
         computing, where I worked on topics across research, product and strategy. I was product lead for
-        building and launching rigetti's quantum cloud service on top of it's superconducting QPUs and the
+        building and launching rigetti's quantum cloud service on top of its superconducting QPUs and the
         <a href="http://forest.rigetti.com" target="_blank">forest</a>
         quantum programming toolkit.
     </p>
