add link to public library

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <a href="https://www.linkedin.com/in/zengwill/" target="_blank">linkedin </a> |
     <a href="https://arxiv.org/a/zeng_w_1.html" target="_blank">arXiv</a> |
     <a href="https://goo.gl/cLuZij" target="_blank">currently listening</a> |
+    <a href="https://docs.google.com/document/d/1MSrb1cnKiE8B507Nub9IXK2d3wF3x7PP8_EFf2HbUJc/edit?usp=sharing"
+       target="_blank">public library</a> |
     <a href="http://unitary.fund" target="_blank">unitary fund</a> |
     <br><br>
 
