--- a/index.html
+++ b/index.html
@@ -47,21 +47,17 @@
         engineering.
     </p>
 
-    <p>Until recently, I was at <a href="http://rigetti.com" target="_blank">rigetti</a> quantum
+    <p>I run the <a href="http://unitary.fund">unitary fund</a>, a non-profit research group dedicated to helping
+        create a quantum technology industry that benefits the most people. We run a grant program to
+        support the development of new open source quantum software, and we fund our own internal research on key
+        projects for the ecosystem.
+    </p>
+
+    <p>Previously, I was at <a href="http://rigetti.com" target="_blank">rigetti</a> quantum
         computing, where I worked on topics across research, product and strategy. I was product lead for
         building and launching rigetti's quantum cloud service on top of its superconducting QPUs and the
         <a href="http://forest.rigetti.com" target="_blank">forest</a>
-        quantum programming toolkit.
-    </p>
-
-    <p><strong>I'm now working on something new. More to come :)</strong>
-    </p>
-
-    <p>I run the <a href="http://unitary.fund">unitary fund</a> to support open source
-        quantum programming with grants.
-        I was co-founder of the
-        <a href="http://forest.rigetti.com" target="_blank">forest</a>
-        experimental quantum programming toolkit, including the open source libraries
+        quantum programming toolkit, including the open source libraries
         <a href="https://github.com/rigetticomputing/pyquil" target="_blank">pyquil</a>
         and
         <a href="https://github.com/rigetticomputing/grove" target="_blank">grove</a>. My
@@ -77,7 +73,7 @@
     </p>
 
     <p>If you want to learn more about how to get started with quantum computing,
-        <a href="http://cs269q.stanford.edu">I'm currently teaching an introductory
+        <a href="http://cs269q.stanford.edu">I recently taught an introductory
         course at Stanford which you can follow online</a>.
         There is also a short introduction, which is part of the
         <a href="http://pyquil.readthedocs.io/en/latest/intro_to_qc.html"> documentation for pyQuil.</a>
