--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             21 November, 2019
             <br><br>
             Unitary Fund announces an expansion of our micro-grant program and our first in house research project at
-            Unitary Labs. To apply for job oppertunities or a micro-grant
+            Unitary Labs. To apply for job opportunities or a micro-grant
             visit <a href="https://unitary.fund/">unitary.fund</a>.
             <br>
         </p>
