--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
         engineering.
     </p>
 
-    <p>I run the <a href="http://unitary.fund">unitary fund</a>, a non-profit research group dedicated to helping
-        create a quantum technology industry that benefits the most people. We run a grant program to
-        support the development of new open source quantum software, and we fund our own internal research on key
-        projects for the ecosystem.
+    <p>I run a quantum technology research group at Goldman Sachs as well as
+        the <a href="http://unitary.fund">unitary fund</a>, a non-profit research group dedicated to helping
+        create a quantum technology industry that benefits the most people.
     </p>
 
     <p>Previously, I was at <a href="http://rigetti.com" target="_blank">rigetti</a> quantum
