update broken pyquil qc intro link

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <a href="http://cs269q.stanford.edu">I recently taught an introductory
         course at Stanford which you can follow online</a>.
         There is also a short introduction, which is part of the
-        <a href="http://pyquil.readthedocs.io/en/latest/intro_to_qc.html"> documentation for pyQuil.</a>
+        <a href="http://docs.rigetti.com/en/stable/intro.html"> documentation for pyQuil.</a>
         I'd also recommend this
         <a href="https://skillsmatter.com/skillscasts/11929-programming-the-world-s-first-quantum-computers-using-forest"
            target="_blank">video lecture</a> on modern quantum programming.
