--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </p>
 
     <p>I run a quantum technology research group at Goldman Sachs as well as
-        the <a href="http://unitary.fund">unitary fund</a>, a non-profit research group dedicated to helping
+        the <a href="http://unitary.fund">unitary fund</a>, a non-profit research group helping
         create a quantum technology industry that benefits the most people.
     </p>
 
