--- a/quotes.html
+++ b/quotes.html
@@ -255,11 +255,13 @@ The apparition of these faces in the crowd;<br>
 Petals on a wet, black bough.<br>
 
 <br>	- Ezra Pound<br><br>
- 
-And every science, when we understand it not as an instrument of power and domination but as an adventure in knowledge pursued by our species across the ages, is nothing but this harmony, more or less vast, more or less rich from one epoch to another, which unfurls over the course of generations and centuries, by the delicate counterpoint of all the themes appearing in turn, as if summoned from the void.
+
+
+And every science, when we understand it not as an instrument of power and domination but as an adventure in knowledge pursued by our species across the ages, is nothing but this harmony, more or less vast, more or less rich from one epoch to another, which unfurls over the course of
+<a id="generations"><b>generations</b></a> and centuries, by the delicate counterpoint of all the themes appearing in turn, as if summoned from the void.
 
 <br>-	Alexandre Grothendieck, Récoltes et Semailles, pg. 20<br><br>
- 
+
 If there is one thing in mathematics that fascinates me more than anything else (and doubtless always has), it neither “number” or “size”, but always form. And among the thousand-and-one faces whereby form chooses to reveal itself to us, the one that fascinates me more than any other and continues to fascinate me, is the structure hidden in mathematical things.
 
 <br>-	Alexandre Grothendieck, Récoltes et Semailles, pg. 27<br><br>
