--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <a href="https://goo.gl/cLuZij" target="_blank">currently listening</a> |
     <a href="https://docs.google.com/document/d/1MSrb1cnKiE8B507Nub9IXK2d3wF3x7PP8_EFf2HbUJc/edit?usp=sharing"
        target="_blank">public library</a> |
+    <a href="will.html">questions</a> |
     <a href="http://unitary.fund" target="_blank">unitary fund</a> |
     <br><br>
 
