update index text

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <br><br>
 
     <!-- About -->
-    <p><strong>I work to make quantum computing useful, sooner, and for more people. </strong>
+    <p><highlight>I work to make quantum computing useful, sooner, and for more people</highlight>.
         My tools are quantum computer architecture and quantum software/algorithm
         engineering.
     </p>
@@ -54,10 +54,10 @@
     </p>
 
     <p>Previously, I was at <a href="http://rigetti.com" target="_blank">rigetti</a> quantum
-        computing, where I worked on topics across research, product and strategy. I was product lead for
-        building and launching rigetti's quantum cloud service on top of its superconducting QPUs and the
-        <a href="http://forest.rigetti.com" target="_blank">forest</a>
-        quantum programming toolkit, including the open source libraries
+        computing, where I was product lead for
+        building and launching rigetti's quantum cloud service on top of its superconducting QPUs
+        and for the forest quantum programming toolkit, including the open
+        source libraries
         <a href="https://github.com/rigetticomputing/pyquil" target="_blank">pyquil</a>
         and
         <a href="https://github.com/rigetticomputing/grove" target="_blank">grove</a>. My
@@ -69,7 +69,7 @@
         qubit systems at
         <a href="http://qulab.eng.yale.edu/" target="_blank">yale</a>
         and
-        <a href="http://www.qudev.ethz.ch/" target="_blank">eth zurich.</a>
+        <a href="http://www.qudev.ethz.ch/" target="_blank">eth zurich</a>.
     </p>
 
     <p>If you want to learn more about how to get started with quantum computing,
