--- a/index.html
+++ b/index.html
@@ -48,10 +48,18 @@
         engineering.
     </p>
 
-    <p>I run a quantum technology research group at Goldman Sachs as well as
-        the <a href="http://unitary.fund">unitary fund</a>, a non-profit research group helping
+    <p>I run a quantum technology research group at <highlight>goldman sachs</highlight> as well as
+        the <highlight><a href="http://unitary.fund">unitary fund</a></highlight>, a non-profit research group helping
         create a quantum technology industry that benefits the most people.
     </p>
+
+    In my view, paradise and reality are kinds of libraries. You can view a
+    <a href="https://docs.google.com/document/d/1MSrb1cnKiE8B507Nub9IXK2d3wF3x7PP8_EFf2HbUJc/edit?usp=sharing"
+       target="_blank">selection of mine</a>
+    as well as some collected
+    <a href="quotes.html">quotes</a>. They're meaningful to me and form background reading
+    for many of the important
+    <a href="will.html">questions and themes</a> in my intellectual life.
 
     <p>Previously, I was at <a href="http://rigetti.com" target="_blank">rigetti</a> quantum
         computing, where I was product lead for
@@ -74,7 +82,7 @@
 
     <p>If you want to learn more about how to get started with quantum computing,
         <a href="http://cs269q.stanford.edu">I recently taught an introductory
-        course at Stanford which you can follow online</a>.
+        course at stanford which you can follow online</a>.
         There is also a short introduction, which is part of the
         <a href="http://docs.rigetti.com/en/stable/intro.html"> documentation for pyQuil.</a>
         I'd also recommend this
