--- a/will.html
+++ b/will.html
@@ -29,24 +29,30 @@
     </script>
 </head>
 
-<h1>W. J. ZENG - An Intellectual Will</h1>
+<h1>W. J. ZENG - Themes Appearing in Turn</h1>
 <!-- Links -->
     |
  <a href="index.html" target="_blank">home</a> |
 <br><br>
 
-I sometimes wonder, if I were to get hit by a bus, what would be the unanswered
-questions that I'd leave behind? What adventures have been glimpsed and left
-unfinished?
+<em>"And every science, when we understand it not as an instrument of power and
+domination but as an adventure in knowledge pursued by our species across the
+ages, is nothing but this harmony, more or less vast, more or less rich from
+one epoch to another, which unfurls over the course of generations and
+centuries, by the delicate counterpoint of all the themes appearing in turn,
+    as if summoned from the void."</em><br>
+- Alexandre Grothendieck, Récoltes et Semailles<br><br>
+
+Here are some of the themes that encountered. I'm almost
+certain to leave them unfinished.
 <br><br>
 
-Some I don't even know myself. The ink of a
+And there are certainly other themes to me that I don't even know myself.
+The ink of a
 handwritten word is unaware of its own meaning too.
 <br><br>
 
-But here's a short record of ones I know about. The list forms a sort of
-intellectual <strike>Will</strike>will<b>*</b> to pass on to other people.
-Some remain quite vague. Your patience is appreciated.
+But here's a short record of ones I know about. Your patience is appreciated.
 <br><br>
 I'm always up for discussions on these topics
 <a href="https://twitter.com/wjzeng">@wjzeng</a>.
@@ -154,15 +160,6 @@ I'm always up for discussions on these topics
             bug and not a feature?</a></li>
     <br><br>
 </ul>
-
-<b>*</b> Of course will is in my name. As a kid I was fascinated by that
-lexical ambiguity. I'm still fascinated by it.
-<a href="https://en.wikipedia.org/wiki/Buffalo_buffalo_Buffalo_buffalo_buffalo_buffalo_Buffalo_buffalo>">
-   Language does strange things</a>
-that even surprise its speakers. Having my own
-name be an example was an early reminder.
-"Do you think Jo desires for her estate-record to be read?" becomes
-"Will Will will Will's will to be read?"
 
 
 </body>
