--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
         create a quantum technology industry that benefits the most people.
     </p>
 
-    In my view, paradise and reality are kinds of libraries. You can view a
+    I believe that paradise and reality are kinds of libraries. You can view a
     <a href="https://docs.google.com/document/d/1MSrb1cnKiE8B507Nub9IXK2d3wF3x7PP8_EFf2HbUJc/edit?usp=sharing"
-       target="_blank">selection of mine</a>
+       target="_blank">selection of my library</a>
     as well as some collected
-    <a href="quotes.html">quotes</a>. They're meaningful to me and form background reading
+    <a href="quotes.html">quotes</a>. They're background reading
     for many of the important
     <a href="will.html">questions and themes</a> in my intellectual life.
 
