--- a/will.html
+++ b/will.html
@@ -43,11 +43,11 @@ centuries, by the delicate counterpoint of all the themes appearing in turn,
     as if summoned from the void."</em><br>
 - Alexandre Grothendieck, Récoltes et Semailles<br><br>
 
-Here are some of the themes that encountered. I'm almost
+Here are some themes that I have encountered. I'm almost
 certain to leave them unfinished.
 <br><br>
 
-And there are certainly other themes to me that I don't even know myself.
+And there are certainly others that I don't even know myself.
 The ink of a
 handwritten word is unaware of its own meaning too.
 <br><br>
@@ -80,8 +80,8 @@ I'm always up for discussions on these topics
     <br><br>
     <li>The most important impact of quantum computers will be widespread
         understanding by users of how different reality is from
-        classical/Newtonian models of the world. This will have broad impacts
-        on humanity as a whole conceptualizes reality.
+        classical/Newtonian models of the world. This will fundamentally
+        change how humanity as a whole conceptualizes reality.
     </li>
     <br><br>
     <li>Language made from concatenated symbols will eventually
@@ -100,8 +100,8 @@ I'm always up for discussions on these topics
         precursor version of this.
     </li>
     <br><br>
-    <li>Unification from an information theoretic foundation for
-        reality will eventually lead to creative technologies that influence
+    <li>Unification by an information theoretic foundation for
+        the world will eventually lead to creative technologies that influence
         reality more profoundly then anything we can imagine today.
         <highlight>Eventually this will collapse the distinction
             between thought and reality</highlight>.
