--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
        target="_blank">public library</a> |
     <a href="will.html">questions</a> |
     <a href="http://unitary.fund" target="_blank">unitary fund</a> |
+    <a href="faq.html">f.a.q</a> |
     <br><br>
 
     <!-- About -->
@@ -50,7 +51,9 @@
 
     <p>I run a quantum technology research group at <highlight>goldman sachs</highlight> as well as
         the <highlight><a href="http://unitary.fund">unitary fund</a></highlight>, a non-profit research group helping
-        create a quantum technology industry that benefits the most people.
+        create a quantum technology industry that benefits the most people. Answers to some questions I am frequently
+        asked are in
+        <a href="faq.html">my f.a.q</a>.
     </p>
 
     I believe that paradise and reality are kinds of libraries. You can view a
