--- a/faq.html
+++ b/faq.html
@@ -82,6 +82,23 @@ and prime factorization
 Note that there is much left to discover in applying quantum computers.
 <strong>I am optimistic that these resource requirements will continue to decrease.</strong>
 
+<br><br>
+<strong>Q: Does anyone make art with quantum computers / quantum tech?</strong><br>
+There's been more then a few surprising creative uses already. There are folks looking at generating music
+<a href="http://quantummusic.org/" target="_blank">[1]</a>
+<a href="https://www.youtube.com/watch?v=YZDEgorn5Aw" target="_blank">[2]</a>
+<a href="https://arxiv.org/abs/2006.13849" target="_blank">[3]</a>.
+There is also a growing field of quantum gaming. James Wooten has an excellent
+<a href="https://decodoku.medium.com/the-history-of-games-for-quantum-computers-a1de98859b5a">summary history of quantum computer games</a>
+(with mention of a mobile game that Jo and I made at the one of the worlds first quantum computer hackathons).
+There's also a
+<a href="https://www.ibm.com/ibm/responsibility/initiatives/activitykits/quantum/">board game</a>,
+<a href="https://helloquantum.mybluemix.net/">mobile game</a>,
+and
+<a href="https://quantumchess.net/">quantum</a>
+<a href="https://research.cs.queensu.ca/home/akl/techreports/quantumchessTR.pdf">chess</a>.
+
+
 </body>
 
 </html>
