--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <p>I run a quantum technology research group at <highlight>goldman sachs</highlight> as well as
         the <highlight><a href="http://unitary.fund">unitary fund</a></highlight>, a non-profit research group helping
-        create a quantum technology industry that benefits the most people. Answers to some questions I am frequently
+        create a quantum technology industry that benefits the most people. Answers to some questions that I am frequently
         asked are in
         <a href="faq.html">my f.a.q</a>.
     </p>
