update faq with phd question

--- a/faq.html
+++ b/faq.html
@@ -98,6 +98,48 @@ and
 <a href="https://quantumchess.net/">quantum</a>
 <a href="https://research.cs.queensu.ca/home/akl/techreports/quantumchessTR.pdf">chess</a>.
 
+<br><br>
+<strong>Q: How can I get into quantum computing? Do I need a PhD?</strong><br>
+There's lots of ways! Quantum technology is a new field and growing fast.
+I'll break down suggestions based on current career stage:
+<ul>
+    <li><i>High school</i>:
+        Check out these <a href="https://unitary.fund/posts/high_school_resources.html">resources</a> from Unitary Fund.
+        My advice is to work on projects in addition to taking courses. That way you develop a portfolio that
+        shows your developing capabilities.
+        Open source software projects are great places to start since they have a low barrier to entry.
+        See if you can close some issues on <a href="https://qosf.org/project_list/">open source projects</a>.
+    </li>
+    <li><i>Undergrad [Quantum Engineering]</i>:
+        Look for internships/research labs where you can be a builder and not just a course taker. See above for open
+        open source project suggestions. It is no longer the case that you have to get a PhD in order to contribute to
+        the cutting edge in quantum tech. Particularly the engineering disciplines of quantum software engineering,
+        control systems engineering, electrical and mech eng, don't require a PhD. Sometimes you'll get to the cutting
+        edge faster by joining a startup or industrial lab rather than an academic one. A list of companies in the space
+        is hosted <a href="https://quantumcomputingreport.com/players/">here</a>.
+    </li>
+    <li><i>Undergrad [Research]</i>:
+        That said, there are some areas of quantum technology that are more research than engineering. They include
+        developing new quantum algorithms, error-correction schemes, or qubit/gate types. In these fields, a PhD can be
+        very helpful. A PhD teaches you how to do independent original research whose outputs are publications. In the
+        open research areas of quantum computing, these skills are critical and a PhD is often the best way to get them.
+        A PhD does come with high opportunity costs in time and money. If you are unsure, then taking a couple of years
+        to do engineering in industry around quantum tech can give you a better sense of whether you really need research
+        skills. It will also help you determine what group you'd like to work with in a PhD.
+    </li>
+    <li><i>Incoming PhD</i>:
+        When considering where to do a PhD, candidates often consider first the school, then the department, and then
+        the advisor. This is precisely the opposite order of importance. Your PhD supervisor does not only teach you skills,
+        but they also act as your career guide and primary mentor for years. It is worth taking the time to determine your
+        supervisor as an individual if you can.
+    </li>
+    <li><i>Current PhD</i>:
+        Many companies and research labs offer internships during the summer. These are a great way to expand into new
+        subfields and to experience different working cultures. <strong>If you've a background in algorithms and
+        are interested in quantum applications in finance then let me know. My group at Goldman takes PhD interns.
+            You can reach me <a href="https://twitter.com/wjzeng">@wjzeng</a> on twitter.</strong>
+    </li>
+</ul>
 
 </body>
 
