--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <a href="https://scholar.google.com/citations?user=ctec7t4AAAAJ&hl=en" target="_blank">research</a> |
     <a href="https://www.linkedin.com/in/zengwill/" target="_blank">linkedin </a> |
     <a href="http://cs269q.stanford.edu" target="_blank">CS269Q</a> |
-    <a href="https://goo.gl/cLuZij" target="_blank">currently listening</a> |
+    <a href="https://music.youtube.com/playlist?list=PLz5SJu5WGusonIohCWn0iM0YIaxEfXshC" target="_blank">currently listening</a> |
     <a href="https://docs.google.com/document/d/1MSrb1cnKiE8B507Nub9IXK2d3wF3x7PP8_EFf2HbUJc/edit?usp=sharing"
        target="_blank">public library</a> |
     <a href="will.html">questions</a> |
