--- a/faq.html
+++ b/faq.html
@@ -101,6 +101,9 @@ and
 <br><br>
 <strong>Q: How can I get into quantum computing? Do I need a PhD?</strong><br>
 There's lots of ways! Quantum technology is a new field and growing fast.
+Fortunately, the amount of available educational material is growing rapidly.
+You can find many links to <a href="https://quantumcomputingreport.com/resources/education/">
+    educational materials here.</a>
 I'll break down suggestions based on current career stage:
 <ul>
     <li><i>High school</i>:
@@ -125,7 +128,12 @@ I'll break down suggestions based on current career stage:
         open research areas of quantum computing, these skills are critical and a PhD is often the best way to get them.
         A PhD does come with high opportunity costs in time and money. If you are unsure, then taking a couple of years
         to do engineering in industry around quantum tech can give you a better sense of whether you really need research
-        skills. It will also help you determine what group you'd like to work with in a PhD.
+        skills. It will also help you determine what group you'd like to work with in a PhD. Here are a few example
+        undergraduate programs that offer research experience:
+        [<a href="https://uwaterloo.ca/institute-for-quantum-computing/programs/useqip">IQC Waterloo</a>]
+        [<a href="https://www.lanl.gov/projects/national-security-education-center/information-science-technology/summer-schools/quantumcomputing/index.php">LANL</a>]
+        [<a href="https://jqi.umd.edu/apply">UMD</a>]
+
     </li>
     <li><i>Incoming PhD</i>:
         When considering where to do a PhD, candidates often consider first the school, then the department, and then
