add pr for low depth

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
         .................................... <br>
         2020.12.06 - <strong>Low depth algorithms for quantum amplitude estimation</strong>
         [<a href="https://arxiv.org/abs/2012.03348" target="_blank">arXiv</a>]
+        [<a href="https://qcware.com/news/press-release-april-29/" target="_blank">summary press release</a>]
         <br><br>
         We design and analyze two new low depth algorithms for amplitude estimation (AE)
         achieving an optimal tradeoff between the quantum speedup and circuit depth.
