add factoring faq

--- a/faq.html
+++ b/faq.html
@@ -83,6 +83,14 @@ Note that there is much left to discover in applying quantum computers.
 <strong>I am optimistic that these resource requirements will continue to decrease.</strong>
 
 <br><br>
+<strong>Q: When will quantum computers break RSA?</strong><br>
+Current estimates indicate that we need scaled up, error corrected quantum computers. We need
+numbers of qubits and error rates that are orders of magnitude better than those available today.
+For more details, I recommend this
+<a href="https://www.youtube.com/watch?v=8dcl9GTPebU&t=9253s">DEFCON talk</a> from Craig Gidney.
+It discusses rough cost estimates for factoring and is accessible to general programmers.
+
+<br><br>
 <strong>Q: Does anyone make art with quantum computers / quantum tech?</strong><br>
 There's been more then a few surprising creative uses already. There are folks looking at generating music
 <a href="http://quantummusic.org/" target="_blank">[1]</a>
