add nepec journal link

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
         .................................... <br>
         2021.08.04 - Extending quantum probabilistic error cancellation by noise scaling
         [<a href="https://arxiv.org/abs/2108.02237" target="_blank">arXiv</a>]
+        [<a href="https://docs.google.com/document/d/1M_dm_p4yhRlutWQ-jD4OkwYhjyRwLfUvLzQODIRx2AU/edit?usp=sharing" target="_blank">journal</a>]
         <br><br>
         We unify two error mitigating techniques, using noise scaling to make probabilistic error cancellation
         more robust against mis-calibrated noise models.
