--- a/will.html
+++ b/will.html
@@ -68,7 +68,8 @@ I'm always up for discussions on these topics
     </li>
     <br><br>
     <li>Mathematics is a large distributed artwork, crafted across <a
-            href="quotes.html#generations">generations</a>.
+            href="quotes.html#generations">generations</a>. Increasingly
+        it will be developed by software.
     </li>
     <br><br>
     <li>The physics of reality can be derived from information
@@ -82,6 +83,10 @@ I'm always up for discussions on these topics
         understanding by users of how different reality is from
         classical/Newtonian models of the world. This will fundamentally
         change how humanity as a whole conceptualizes reality.
+    </li>
+    <br><br>
+    <li>Whether the multiverse is real is the most important ethical question
+        for humanity today.
     </li>
     <br><br>
     <li>Language made from concatenated symbols will eventually
@@ -110,6 +115,11 @@ I'm always up for discussions on these topics
         such a technology today. From
         some point of view the eventual "it from bit" theory will be a more
         powerful tool for composing fiction than we have ever yet imagined.
+    </li>
+    <br><br>
+    <li>Science has historically been a decentralized autonomous organization.
+        In the coming years, adopting DAO tooling for science (DeSci), including
+        new market mechanisms, will accelerate progress.
     </li>
     <br><br>
     <li>Aliens can be vastly more divergent beings from us than is often
