--- a/will.html
+++ b/will.html
@@ -85,8 +85,8 @@ I'm always up for discussions on these topics
         change how humanity as a whole conceptualizes reality.
     </li>
     <br><br>
-    <li>Whether the multiverse is real is the most important ethical question
-        for humanity today.
+    <li><highlight>Whether the multiverse is real is the most important ethical question
+        for humanity today</highlight>.
     </li>
     <br><br>
     <li>Language made from concatenated symbols will eventually
