add synthetic bio

--- a/will.html
+++ b/will.html
@@ -137,6 +137,11 @@ I'm always up for discussions on these topics
     <li>The mass slaughter of animals for food is fundamentally unethical.
     </li>
     <br><br>
+    <li>
+        There is an optimistic future of programmable and synthetic biology
+        that will make today's information technology look infantile.
+    </li>
+    <br><br>
     <li>Intelligence/cognition is a performative and context dependent behavior
         and not an innate property. <highlight>One day the inanimate/animate
             distinctions that we hold so strongly to today will become
