add review references

--- a/faq.html
+++ b/faq.html
@@ -91,6 +91,11 @@ For more details, I recommend this
 It discusses rough cost estimates for factoring and is accessible to general programmers.
 
 <br><br>
+<strong>Q: What is a good summary of the state of the art in useful quantum computing?</strong><br>
+I'd recommend this review
+<a href="https://arxiv.org/abs/2203.17181">"Quantum computing at the quantum advantage threshold: a down-to-business review."</a>.
+
+<br><br>
 <strong>Q: Does anyone make art with quantum computers / quantum tech?</strong><br>
 There's been more then a few surprising creative uses already. There are folks looking at generating music
 <a href="http://quantummusic.org/" target="_blank">[1]</a>
@@ -165,6 +170,13 @@ I'll break down other specific suggestions based on current career stage:
             You can reach me <a href="https://twitter.com/wjzeng">@wjzeng</a> on twitter.</strong>
     </li>
 </ul>
+
+<br><br>
+<strong id="algorithms">Q: Are there good references or overviews for learning quantum algorithms?</strong><br>
+For a general course on quantum algorithms I'd recommend these
+<a href="https://arxiv.org/abs/1907.09415">lecture notes</a> from Ronald de Wolf. For specifically noisy intermediate
+scale quantum computing algorithms, which are typically more heuristic and less about computational complexity, there
+is a <a href="https://arxiv.org/abs/2101.08448">recent review article</a>.
 
 </body>
 
