--- a/faq.html
+++ b/faq.html
@@ -174,7 +174,9 @@ I'll break down other specific suggestions based on current career stage:
 <br><br>
 <strong id="algorithms">Q: Are there good references or overviews for learning quantum algorithms?</strong><br>
 For a general course on quantum algorithms I'd recommend these
-<a href="https://arxiv.org/abs/1907.09415">lecture notes</a> from Ronald de Wolf. For specifically noisy intermediate
+<a href="https://arxiv.org/abs/1907.09415">lecture notes</a> from Ronald de Wolf and these recent
+<a href="https://arxiv.org/abs/2201.08309">lecture notes on quantum algorithms for scientific computing</a> by Lin Lin.
+For specifically noisy intermediate
 scale quantum computing algorithms, which are typically more heuristic and less about computational complexity, there
 is a <a href="https://arxiv.org/abs/2101.08448">recent review article</a>.
 
