add haldan quote

--- a/quotes.html
+++ b/quotes.html
@@ -328,5 +328,8 @@ by machines of loving grace.
 
 <br>	- Richard Brautigan<br><br>
 
+The universe is not only queerer than we think, it is queerer than we <i>can</i> think.
+<br>	- J. B. S. Haldane<br><br>
+
 	
 </body></html>
