--- a/faq.html
+++ b/faq.html
@@ -96,6 +96,11 @@ I'd recommend this review
 <a href="https://arxiv.org/abs/2203.17181">"Quantum computing at the quantum advantage threshold: a down-to-business review."</a>.
 
 <br><br>
+<strong>Q: What is quantum entanglement?</strong><br>
+Check out this <a href="https://csferrie.medium.com/how-to-think-about-quantum-entanglement-4ce7a76be4c7" target="_blank">
+    excellent accessible post</a> from Chris Ferrie.
+
+<br><br>
 <strong>Q: Does anyone make art with quantum computers / quantum tech?</strong><br>
 There's been more then a few surprising creative uses already. There are folks looking at generating music
 <a href="http://quantummusic.org/" target="_blank">[1]</a>
@@ -171,7 +176,7 @@ I'll break down other specific suggestions based on current career stage:
     </li>
 </ul>
 
-<br><br>
+<br>
 <strong id="algorithms">Q: Are there good references or overviews for learning quantum algorithms?</strong><br>
 For a general course on quantum algorithms I'd recommend these
 <a href="https://arxiv.org/abs/1907.09415">lecture notes</a> from Ronald de Wolf and these recent
