--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         create a quantum technology industry that benefits the most people.
 
         This <a href="https://www.youtube.com/watch?v=7YMKapct0dQ" target="_blank">recent talk</a>
-        summarizes my goldman group's research towards quantum advantage in finance
+        summarizes my goldman group's research towards quantum advantage in finance.
     </p>
 
     Answers to some questions that I am frequently asked are in
