--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         source libraries
         <a href="https://github.com/rigetticomputing/pyquil" target="_blank">pyquil</a>
         and
-        <a href="https://github.com/rigetticomputing/grove" target="_blank">grove</a>. My
-        quantum instruction set of choice is
+        <a href="https://github.com/rigetticomputing/grove" target="_blank">grove</a>. I helped develop the
+        quantum instruction set called
         <a href="https://arxiv.org/abs/1608.03355" target="_blank">quil</a>. My
         <a href="http://arxiv.org/abs/1512.08062" target="_blank"> phd thesis</a>
         at oxford applies abstract methods (mainly from categorical algebra) to the
@@ -90,10 +90,8 @@
     </p>
 
     <p>If you want to learn more about how to get started with quantum computing,
-        <a href="http://cs269q.stanford.edu">I recently taught an introductory
+        <a href="http://cs269q.stanford.edu">I taught an introductory
         course at stanford which you can follow online</a>.
-        There is also a short introduction, which is part of the
-        <a href="http://docs.rigetti.com/en/stable/intro.html"> documentation for pyQuil.</a>
         I'd also recommend this
         <a href="https://skillsmatter.com/skillscasts/11929-programming-the-world-s-first-quantum-computers-using-forest"
            target="_blank">video lecture</a> on modern quantum programming.
