--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <body>
     <h1>W. J. ZENG</h1>
     <!-- Links --> |
+    <a href="shared/WillZeng_ShortCV.pdf">CV</a> |
     <a href="https://twitter.com/wjzeng" target="_blank">twitter</a> |
     <a href="https://scholar.google.com/citations?user=ctec7t4AAAAJ&hl=en" target="_blank">research</a> |
     <a href="https://www.linkedin.com/in/zengwill/" target="_blank">linkedin </a> |
@@ -41,7 +42,9 @@
     <a href="will.html">questions</a> |
     <a href="http://unitary.fund" target="_blank">unitary fund</a> |
     <a href="faq.html">f.a.q</a> |
+    <a href="https://www.instagram.com/zeng.will/">instagram</a> |
     <br><br>
+    tl;dr <a href="shared/WillZeng_ShortCV.pdf">Short CV available here.</a>
 
     <!-- About -->
     <p><highlight>I work to make quantum computing useful, sooner, and for more people</highlight>.
