--- a/will.html
+++ b/will.html
@@ -45,16 +45,14 @@ centuries, by the delicate counterpoint of all the themes appearing in turn,
 
 Here are some themes that I have encountered. I'm almost
 certain to leave them unfinished.
-<br><br>
 
 And there are certainly others that I don't even know myself.
-The ink of a
-handwritten word is unaware of its own meaning too.
+
 <br><br>
 
 But here's a short record of ones I know about. Your patience is appreciated.
 <br><br>
-I'm always up for discussions on these topics
+I'm always interested in discussions on these topics
 <a href="https://twitter.com/wjzeng">@wjzeng</a>.
 <a href="https://docs.google.com/document/d/1MSrb1cnKiE8B507Nub9IXK2d3wF3x7PP8_EFf2HbUJc/edit?usp=sharing">
     Here's some background
