update with quantonation

--- a/index.html
+++ b/index.html
@@ -47,17 +47,16 @@
     tl;dr <a href="shared/WillZeng_ShortCV.pdf">Short CV available here.</a>
 
     <!-- About -->
-    <p><highlight>I work to make quantum computing useful, sooner, and for more people</highlight>.
-        My tools are quantum computer architecture and quantum software/algorithm
-        engineering.
-    </p>
-
-    <p>I run a quantum technology research group at <highlight>goldman sachs</highlight> as well as
-        the <highlight><a href="http://unitary.fund">unitary fund</a></highlight>, a non-profit research group helping
-        create a quantum technology industry that benefits the most people.
-
-        This <a href="https://www.youtube.com/watch?v=7YMKapct0dQ" target="_blank">recent talk</a>
-        summarizes my goldman group's research towards quantum advantage in finance.
+    <p><highlight>I work to make quantum technology useful, sooner, and for more people</highlight>.<br>
+        To do this, I:
+        <ul>
+        <li>make early stage investments as a partner at <a href="https://www.quantonation.com/">quantonation</a>,</li>
+        <li>support the ecosystem by
+        running the non profit <a href="http://unitary.fund">unitary fund</a>,</li>
+        <li>and do <a href="https://scholar.google.com/citations?user=ctec7t4AAAAJ&hl=en">research</a> in quantum
+                      computer architecture, quantum
+        software/algorithm engineering, and quantum foundations.</li>
+        </ul>
     </p>
 
     Answers to some questions that I am frequently asked are in
@@ -73,7 +72,8 @@
     <a href="will.html">questions and themes</a> in my intellectual life.
     </p>
 
-    <p>Previously, I was at <a href="http://rigetti.com" target="_blank">rigetti</a> quantum
+    <p>Previously, I ran an quantum and advanced computing group at goldman sachs. Before that I was at
+        <a href="http://rigetti.com" target="_blank">rigetti</a> quantum
         computing, where I was product lead for
         building and launching rigetti's quantum cloud service on top of its superconducting QPUs
         and for the forest quantum programming toolkit, including the open
