point to podcast in intro

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
         </ul>
     </p>
 
+    Some topics that I am currently thinking about are covered in this <a
+            href="https://www.youtube.com/watch?v=bS85621GoAI&t=2478s">recent podcast</a>:
+    quantum computing, encryption and risk, agency and objective reality, technology and magic, and more...<br><br>
+
     Answers to some questions that I am frequently asked are in
     <a href="faq.html">my f.a.q</a>.
 
