--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         ga('create', 'UA-19932157-3', 'auto');
         ga('send', 'pageview');
     </script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
