--- a/faq.html
+++ b/faq.html
@@ -78,7 +78,9 @@ and there are there are other examples in chemistry
 <a href="https://arxiv.org/abs/2011.03494" target="_blank">[8]</a>
 <a href="https://arxiv.org/abs/1902.10673" target="_blank">[9]</a>
 and prime factorization
-<a href="https://arxiv.org/abs/1905.09749">[10]</a>.
+<a href="https://arxiv.org/abs/1905.09749">[10]</a>. Our <a href="https://arxiv.org/abs/2401.16317">whitepaper</a>
+(esp. Figure 2) summarizes lots of the current literature around resource estimates for different applications. We're
+aiming to have a live version of these captured at <a href="https://metriq.info/progress">metriq.info/progress</a>.
 Note that there is much left to discover in applying quantum computers.
 <strong>I am optimistic that these resource requirements will continue to decrease.</strong>
 
@@ -92,8 +94,10 @@ It discusses rough cost estimates for factoring and is accessible to general pro
 
 <br><br>
 <strong>Q: What is a good summary of the state of the art in useful quantum computing?</strong><br>
-I'd recommend this review
-<a href="https://arxiv.org/abs/2203.17181">"Quantum computing at the quantum advantage threshold: a down-to-business review."</a>.
+I'd recommend the summary in our <a href="https://arxiv.org/abs/2401.16317">whitepaper</a>
+(esp. the resource estimates in Figure 2) and this review
+<a href="https://arxiv.org/abs/2203.17181">"Quantum computing at the quantum advantage threshold: a down-to-business
+    review."</a>.
 
 <br><br>
 <strong>Q: What is quantum entanglement?</strong><br>
