Update faq.html with new job directives

--- a/faq.html
+++ b/faq.html
@@ -177,8 +177,10 @@ I'll break down other specific suggestions based on current career stage:
     </li>
     <li><i>Current PhD</i>:
         Many companies and research labs offer internships during the summer. These are a great way to expand into new
-        subfields and to experience different working cultures. <strong>If you've a background in algorithms and
-        are interested in quantum applications in finance then let me know. My group at Goldman takes PhD interns.
+        subfields and to experience different working cultures. <strong>If you are interested in working at one
+            of Quantonation's 
+            <a href="https://www.quantonation.com/portfolio/">portfolio companies</a>
+            or at <a href="https://unitary.fund/">Unitary Fund</a> then let me know.
             You can reach me <a href="https://twitter.com/wjzeng">@wjzeng</a> on twitter.</strong>
     </li>
 </ul>
