--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <a href="will.html">questions and themes</a> in my intellectual life.
     </p>
 
-    <p>Previously, I ran an quantum and advanced computing group at goldman sachs. Before that I was at
+    <p>Previously, I ran a quantum and advanced computing group at goldman sachs. Before that I was at
         <a href="http://rigetti.com" target="_blank">rigetti</a> quantum
         computing, where I was product lead for
         building and launching rigetti's quantum cloud service on top of its superconducting QPUs
