--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
     <br><br>
 
     <!-- About -->
-    <p><highlight>I work to make quantum technology useful, sooner, and for more people</highlight>.<br>
-        To do this, I:
+    <p>These days I:
         <ul>
-        <li>make early stage investments as a partner at <a href="https://www.quantonation.com/">quantonation</a>,</li>
-        <li>support the ecosystem by
+        <li>make early stage investments in physics/compute tech as a partner at <a
+                href="https://www.quantonation.com/">quantonation</a>,</li>
+        <li>support public goods in quantum tech by
         running the non profit <a href="http://unitary.fund">unitary fund</a>,</li>
         <li>and do <a href="https://scholar.google.com/citations?user=ctec7t4AAAAJ&hl=en">research</a> in quantum
                       computer architecture, quantum
@@ -64,8 +64,7 @@
     quantum computing, encryption and risk, agency and objective reality, technology and magic, and more...</highlight>
     <br><br>
 
-    Answers to some questions that I am frequently asked are in
-    <a href="faq.html">my f.a.q</a>.
+    This <a href="faq.html">f.a.q</a> answers some questions that I am frequently asked.
 
     <p>
     I believe that paradise and reality are kinds of libraries. You can view a
