--- a/faq.html
+++ b/faq.html
@@ -54,7 +54,7 @@ classification tasks
 <a href="https://arxiv.org/abs/2012.04145" target="_blank">[5]</a>
 <a href="https://arxiv.org/abs/1712.05771" target="_blank">[6]</a>.
 While these do give accurate answers for non-trival problems by running on real quantum hardware,
-the instances sizes are still very small.<br><br>
+the instances sizes are still very small. <strong>(Note 7/2024: This paragraph needs updating!)</strong><br><br>
 
 When asking about milestones for quantum computer performance, clear terminology is important.
 I wrote
@@ -97,7 +97,9 @@ It discusses rough cost estimates for factoring and is accessible to general pro
 I'd recommend the summary in our <a href="https://arxiv.org/abs/2401.16317">whitepaper</a>
 (esp. the resource estimates in Figure 2) and this review
 <a href="https://arxiv.org/abs/2203.17181">"Quantum computing at the quantum advantage threshold: a down-to-business
-    review."</a>.
+    review"</a>. For some more example applications you can see this
+<a href="https://arxiv.org/abs/2406.06625">survey of quantum computer applications</a> at Los
+Alamos National Lab.
 
 <br><br>
 <strong>Q: What is quantum entanglement?</strong><br>
